--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+body {
+	background-color: #c6ddff;
+}
+.sub-heading {
+	font-family: "Sansita", sans-serif;
+	font-size: 56px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-btn {
+	top: -25%;
+	position: absolute;
+	display: flex;
+	right: 40px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-btn .btn {
+	font-size: 32px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav {
+	background-color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
+.font-26 {
+	font-size: 26px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.font-20 {
+	font-size: 20px;
+}
+.font-weight-900 {
+	font-weight: 900;
+}
+.search {
+	font-size: 28px;
+	border-radius: 36px;
+	margin-bottom: 50px;
+}
+.patient-list {
+	font-size: 24px;
+	padding: 30px;
+	background-color: #fff;
+	margin-bottom: 15px;
+	border-radius: 34px;
+}
+.add-btn {
+	font-size: 30px;
+	padding: 5px 40px;
+}
+.font-60 {
+	font-size: 60px;
+}
+.font-50 {
+	font-size: 50px;
+}
+.add-patient-form {
+	font-size: 24px;
+	border-radius: 10px;
+}
+[type="file"] {
+	height: 0;
+	overflow: hidden;
+	width: 0;
+}
+.upload-btn {
+	padding: 5px 70px;
+}
+.header {
+	padding: 3rem 6rem;
+}
+.bg-white {
+	background-color: #fff;
+}
+.img-main-page {
+	width: 100%;
 }
